# learning-cmake

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
ExternalLibs/gTest/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/: CMakeLists.txt  app.cpp
doc/: gtest_add
include/tst/: function_to_test.hpp
src/: CMakeLists.txt  function_to_test.cpp
tests/: CMakeLists.txt  func_test.cpp
